@@ -10,6 +10,7 @@
 -update color object.
 -revise sprite to optimize.
 -revise vector elementwise object.
+-revise vector operator methods.
 
 0.32    2022-04-17
 -add key set_repeat method.
